SAK-18940
git-svn-id: https://source.sakaiproject.org/svn/portal/trunk@80993 66ffb92e-73f9-0310-93c1-f5514f145a0a